--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="footer.css"/>
 </head>
 <body>
+    <!-- This is the navbar -->
     <nav class="navBar">
         <ul class="nav">
             <li class="nav__item"><a href="#">Kittens</a></li>
