added kitten comment

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </nav>
 
     <div class="container">
+        <!-- this begins the kittn pictures -->
         <article class="animal">
             <header>Curled up kitten</header>
             <section>
